cluster/namespace.yaml
# kubectl apply -f namespace.yaml

---
kind: Namespace
apiVersion: v1
metadata:
  name: exercise
  labels:
    name: exercise

---
kind: Namespace
apiVersion: v1
metadata:
  name: vault
  labels:
    name: vault

---

kind: Namespace
apiVersion: v1
metadata:
  name: security-tools
  labels:
    name: security-tools

---

kind: Namespace
apiVersion: v1
metadata:
  name: atlantis
  labels:
    name: atlantis

---

kind: Namespace
apiVersion: v1
metadata:
  name: glitchtip
  labels:
    name: glitchtip

---
kind: Namespace
apiVersion: v1
metadata:
  name: elastic-system
  labels:
    name: elastic-system

---

kind: Namespace
apiVersion: v1
metadata:
  name: argocd
  labels:
    name: argocd
    
---

kind: Namespace
apiVersion: v1
metadata:
  name: observability
  labels:
    name: observability
    
---

kind: Namespace
apiVersion: v1
metadata:
  name: kyverno
  labels:
    name: kyverno
    
---

kind: Namespace
apiVersion: v1
metadata:
  name: drone
  labels:
    name: drone
    
---

kind: Namespace
apiVersion: v1
metadata:
  name: argocd
  labels:
    name: argocd
    
---

kind: Namespace
apiVersion: v1
metadata:
  name: argo-rollouts
  labels:
    name: argo-rollouts
    
---

kind: Namespace
apiVersion: v1
metadata:
  name: registry
  labels:
    name: registry
    
---

kind: Namespace
apiVersion: v1
metadata:
  name: ingress-nginx
  labels:
    name: ingress-nginx
    
---

kind: Namespace
apiVersion: v1
metadata:
  name: database
  labels:
    name: database
    
---

kind: Namespace
apiVersion: v1
metadata:
  name: analytic
  labels:
    name: analytic
    
---
