cluster/bastion.yaml
# kubectl -n exercise apply -f bastion.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bastion
  labels:
    app: bastion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bastion
  template:
    metadata:
      labels:
        app: bastion
    spec:
      containers:
        - name: bastion
          image: glendmaatita/bastion:latest
          imagePullPolicy: Always

---
